2003-11-14  Jerry James  <james@xemacs.org>

	* emacs.c (voodoo_free_hook): ICC understands typeof.
	* emacs.c (Fkill_emacs): Ditto.
	* ralloc.c (init_ralloc): Ditto.
	* ralloc.c (r_alloc_reinit): Ditto.

2003-11-14  Jerry James  <james@xemacs.org>

	* config.h.in: Remove last traces of GNU DLD.

2003-11-01  Markus Kaltenbach  <makalten@informatik.uni-tuebingen.de>

	* alloc.c (garbage_collect_1):
	move kkcc_marking() call inside the while loop containing all
	the iterative calls for marking weak data structures since the
	entries on the kkcc_stack need to be processed after every run
	to mark attached objects
	
2003-10-16  Jerry James  <james@xemacs.org>

	* realpath.c (qxe_realpath): When a symbolic link to an absolute
	pathname is found, really start over.

2003-10-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* bytecode.c (execute_optimized_program):
	Revert Mike's patch temporarily.

2003-10-11  Olivier Galibert  <galibert@pobox.com>

	* window.c (Fdelete_window): Dirty the mirror structure _before_
	marking the window deleted.

2003-10-14  Jerry James  <james@xemacs.org>

	* Makefile.in.in (shlib_objs): Remove emodules.o.
	* Makefile.in.in (objs): Add emodules.o; it always has content now.
	* emacs.c (main_1): Call vars_of_module to define module-extensions.
	* emodules.c: Always set Vmodule_load_path and Vmodule_extensions.
	* emodules.h: Vmodule_load_path is now static.

2003-10-15  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (get_unallocated_leading_byte): #endif->#else.

2003-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: Don't define __GNUC__ if using a non-GNU compiler.
	Use a consistent spacing scheme.

2003-08-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* mule-charset.c (get_unallocated_leading_byte): Compiler quietus.

2003-10-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* nas.c (AudioLibraryVersionMajor, AudioLibraryVersionMinor):
	Ensure they are #define'd.

2003-10-13  Stephen J. Turnbull  <stephen@xemacs.org>
