@@ -1,3 +1,12 @@
+2003-11-18  Jerry James  <james@xemacs.org>
+
+	* config.h.in: Add TYPEOF.
+	* emacs.c (voodoo_free_hook): Revert the previous patch and use
+	TYPEOF instead.
+	* emacs.c (Fkill_emacs): Ditto.
+	* ralloc.c (init_ralloc): Ditto.
+	* ralloc.c (r_alloc_reinit): Ditto.
+
 2003-11-14  Jerry James  <james@xemacs.org>
 
 	* emacs.c (voodoo_free_hook): ICC understands typeof.
